[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Fred Oden <fred.oden@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features     = ["raw_value"] }
tokio = { version = "1", features = ["full"] }

